force-app/main/default/objects/Campaign_Junction__c/Campaign_Junction__c.object-meta.xml
<CustomObject>
    <label>Campaign Junction</label>
    <nameField>
        <displayFormat>CJN-{0000}</displayFormat>
        <label>Campaign Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>