force-app/main/default/objects/Campaign_Junction__c/fields/Account_Roles__c.field-meta.xml
<CustomField>
    <fullName>Account_Roles__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Roles</label>
    <referenceTo>Account_Roles__c</referenceTo>
    <relationshipLabel>Campaign Junctions</relationshipLabel>
    <relationshipName>Campaign_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>