force-app/main/default/objects/Campaign_Junction__c/fields/Active_Job_Contact__c.field-meta.xml
<CustomField>
    <fullName>Active_Job_Contact__c</fullName>
    <formula>Campaign__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Job Contact</label>
    <type>Checkbox</type>
</CustomField>