force-app/main/default/objects/Campaign_Junction__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Campaign Junctions</relationshipLabel>
    <relationshipName>Campaign_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>